# thesis-project

./: 2  2015.sh  2017process.sh  README.md  cones.py  countdestination.py  countorigin.py  customercone.py  dummy.py  getripestats.sh  knnclassifier.py  mon_links.py  peer.py  peer_origin_map.py  peerippath.sh  sourcedestination.py  utils.py
bgp-python/anant/: attacker.py  (+1 more)
bgpmon/bgpmon-7.4/test/mrt_feedtest/: README  configure.in
bgpmon/bgpmon-7.4/test/mrt_feedtest/src/: defs.h  file.c  file.h  readMRT.c  server.h
count/: linescounter.sh
dedup/: dedup.py  peer_dedup.py
experiments/: attackervictimanalysis.txt  plotdata.csv
plots/: growth.py  monitorperfplot.py  visibilityimpactplot.py
scripts/: 1  2016.sh  2016.sh_1  2018process.sh  IntervalGenerator.py  argument.py  betweenness.py  commandgen.sh  destinationsource.py  graphreduction.py  jaccard.py  pathrelationships.py  peer_origin_count.py  peercore.py  populatedata.py  rcommandgen.sh
stg1/: collectorpathvisibility.py  originprefixvisibility.py  pathprefixlist.py  peerpathvisibility.py  peerprefixvisibility.py  prefixpathlist.py  rawscount_pct.py
stg2/: collectorconversation.py  peerconversation.py
stg3/: collectorpeer.py  peerorigin.py
stg4/: AStop.py  aasdasda.py  ascount.py  cliquefinder.py  event_setcover.py  fileaccessor.py  generatestats.py  greedy_2.py  knnclassifierFile.py  link_monitor.py  long_paths.py  monitorselection.py  parameters.txt  relationshipbuilder.py  routingstats.py  toygraph.py  tuneup.py  variationinvisibility.py
stg5/: graphproperties.py  utils.py  vertexcover.py
(+399 files in other folders)
